# ALSE_2510

./: .gitignore  .nuevo.cpp.swp  djd  funciones_a.c  main.c  neu  nuevo.c  nuevo.cpp  seno.cpp
Filtro_T/: filtro_tarea.cpp  filtro_tarea.h
Filtro_tarea/: filtro.cpp  filtro.h
Parcial/: prueba.cpp
Polinomios/: CMakeLists.txt  main.cpp
Tareas/: Polinomios.cpp
Trabajos_y_pruebas/: examen  funciones.cpp  main.c  nue  nuevo.c  vectores.cpp
caracteres/: caracteres.cpp
clasificacion/: CMakeLists.txt  clasificacion.cpp
class_Estudiante/: estudiante.h  persona.cpp  persona.h
clss_Ref_Punt/: main.c
complejo/: complejo.cpp  complex.cpp  complex.h  main.cpp
curso/: CMakeLists.txt  estudiante-tarea.cpp  estudiante-tarea.h  estudiante.cpp  estudiante.h  estudiante_tarea.cpp  estudiante_tarea.h  main-tarea.cpp  main.cpp  main_tarea.cpp  persona-tarea.cpp  persona-tarea.h  persona.cpp  persona_tarea.cpp  persona_tarea.h
db_sqlite/cliente_c/: CMakeLists.txt  delete_db.cpp  insert_db.cpp  insert_sensores.cpp  open_db.cpp  select_db.cpp  select_temp.cpp
eje3/: eje3  func  funciones  funciones.cpp
eje4/: CMakeLists.txt  caracteres.cpp  examen.cpp  histograma.cpp  vectores  vectores.cpp
eje5/: CMakeLists.txt  clasif.cpp  clasificar  clasificar.cpp  clasificarLunayPaula.cpp  clasificar_tarea.cpp  polinomio.cpp  polys.cpp  tarea
eje_1/: main.c  prueba
eje_2/: main.c  nej
eje_3/: funci  funciones.cpp  main3.c
eje_4/: vectores  vectores.cpp  vectores2
empresa/: CMakeLists.txt  Trabajador-tarea.cpp  Trabajador-tarea.h  datos_empresa.txt  main-tarea2.cpp  (+9 more)
(+88 files in other folders)
